PBEXENGDQA-4614 fix: metaknight issues fix